// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusLabel /> should render correctly if completed with optional props 1`] = `
<_default
  index={1}
  label="false"
  offset={10}
  size="sm"
  status="COMPLETE"
>
  <styled__StatusLabelWrapper
    index={1}
    label="false"
    offset={10}
    size="sm"
    status="COMPLETE"
  >
    <span
      className="styled__StatusLabelWrapper-sc-1pj2h9f-0 gxWZId"
      label="false"
      offset={10}
      size="sm"
    >
      <styled__StatusIcon
        index={1}
        label="false"
        offset={10}
        size="sm"
        status="COMPLETE"
      >
        <span
          className="styled__StatusIcon-sc-1pj2h9f-1 cEubhv"
          label="false"
          offset={10}
          size="sm"
        >
          <styled__CheckIcon
            size="sm"
          >
            <span
              className="styled__CheckIcon-sc-1pj2h9f-3 geKZvV"
              size="sm"
            />
          </styled__CheckIcon>
        </span>
      </styled__StatusIcon>
      <styled__StatusLabel
        index={1}
        label="false"
        offset={10}
        size="sm"
        status="COMPLETE"
      >
        <span
          className="styled__StatusLabel-sc-1pj2h9f-2 fyrmuP"
          label="false"
          offset={10}
          size="sm"
        >
          Complete
        </span>
      </styled__StatusLabel>
    </span>
  </styled__StatusLabelWrapper>
</_default>
`;

exports[`<StatusLabel /> should render correctly if not complited with optional props 1`] = `
<_default
  index={1}
  label="\\"label\\""
  offset={10}
  size="sm"
  status="OPEN"
>
  <styled__StatusLabelWrapper
    index={1}
    label="\\"label\\""
    offset={10}
    size="sm"
    status="OPEN"
  >
    <span
      className="styled__StatusLabelWrapper-sc-1pj2h9f-0 gxWZId"
      label="\\"label\\""
      offset={10}
      size="sm"
    >
      <styled__StatusIcon
        index={1}
        label="\\"label\\""
        offset={10}
        size="sm"
        status="OPEN"
      >
        <span
          className="styled__StatusIcon-sc-1pj2h9f-1 fbADtP"
          label="\\"label\\""
          offset={10}
          size="sm"
        />
      </styled__StatusIcon>
      <styled__StatusLabel
        index={1}
        label="\\"label\\""
        offset={10}
        size="sm"
        status="OPEN"
      >
        <span
          className="styled__StatusLabel-sc-1pj2h9f-2 jGdXWF"
          label="\\"label\\""
          offset={10}
          size="sm"
        >
          Open
        </span>
      </styled__StatusLabel>
    </span>
  </styled__StatusLabelWrapper>
</_default>
`;

exports[`<StatusLabel /> should render correctly with mandatory props 1`] = `
<_default
  status="COMPLETE"
>
  <styled__StatusLabelWrapper
    status="COMPLETE"
  >
    <span
      className="styled__StatusLabelWrapper-sc-1pj2h9f-0 gxWZId"
    >
      <styled__StatusIcon
        label="true"
        status="COMPLETE"
      >
        <span
          className="styled__StatusIcon-sc-1pj2h9f-1 gABfOm"
          label="true"
        >
          <styled__CheckIcon>
            <span
              className="styled__CheckIcon-sc-1pj2h9f-3 ecdigu"
            />
          </styled__CheckIcon>
        </span>
      </styled__StatusIcon>
      <styled__StatusLabel
        label="true"
        status="COMPLETE"
      >
        <span
          className="styled__StatusLabel-sc-1pj2h9f-2 jGdXWF"
          label="true"
        >
          Complete
        </span>
      </styled__StatusLabel>
    </span>
  </styled__StatusLabelWrapper>
</_default>
`;
